# kube-rs

./: Cargo.toml
auto-default/: Cargo.toml
auto-default/src/: lib.rs
examples/: job_openapi.rs
