[package]
name = "auto-default"
version = "0.1.0"
authors = ["Teo Klestrup Röijezon <teo.roijezon@interops.se>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.14", features = ["full"] }
proc-macro2 = "1.0.8"
quote = "1.0.2"
